Fix for PR lib/56224 Correct addstr behaviour so it truncates the string in the case where a string is added on the bottom line of a window where scrolling is disabled as per the SUSv2 specification.